# my-mcp

./: Cargo.toml  Dockerfile
.github/workflows/: docker-build.yml
src/: main.rs
