[package]
name = "my-mcp"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.9"
reqwest = { version = "0.13.4", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.52.3", features = ["rt-multi-thread", "macros", "signal"] }
tower-http = { version = "0.7.0", features = ["cors"] }
chrono = "0.4"

[profile.release]
opt-level = "z"            # 最高优化级别
lto = true                 # 启用链接时优化
codegen-units = 1          # 单代码单元，提升优化效果
panic = 'abort'            # 避免 panic 展开代码
strip = true               # Rust 1.59+ 自动去除符号
debug = false              # 不生成调试信息
debug-assertions = false   # 关闭调试断言
overflow-checks = false    # 关闭溢出检查
incremental = false        # 禁用增量编译
